--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "league/flysystem-aws-s3-v3": "^3.28",
+        "maatwebsite/excel": "^3.1",
         "opcodesio/log-viewer": "^3.10",
         "spatie/laravel-activitylog": "^4.8",
         "spatie/laravel-medialibrary": "^11.8",
